--- a/index.html
+++ b/index.html
@@ -18,8 +18,28 @@ title: Home
   {% endfor %}
 </div>
 
+<hr>
 
+{% for tag in site.tags %}
+{% assign t = tag | first %}
+{% assign posts = tag | last %}
 
+{{ t | downcase }}
+<ul>
+  {% for post in posts %}
+  {% if post.tags contains t %}
+  <li>
+    <a href="{{ post.url }}">{{ post.title }}</a>
+    <span class="date">{{ post.date | date: "%B %-d, %Y"  }}</span>
+  </li>
+  {% endif %}
+  {% endfor %}
+</ul>
+{% endfor %}
+
+<hr>
+
+<!-- 
 <div class="pagination">
   {% if paginator.next_page %}
     <a class="pagination-item older" href="{{ site.baseurl }}page{{paginator.next_page}}">Older</a>
@@ -35,4 +55,4 @@ title: Home
   {% else %}
     <span class="pagination-item newer">Newer</span>
   {% endif %}
-</div>
+</div> -->
