--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: Home
 <img src="{{ site.baseurl }}/public/images/fealty_logo.png" class="center" />
 
 <span class="center">
-  <i><b>Fealty</b></i> is a real-time strategy-rpg set in a world inspired by the early middle ages. You take control of a family of
+  <i><b>Fealty</b></i> is a real-time strategy-rpg set in a world inspired by the early middle ages. You take control of
+  a family of
   characters and it is your task to expand your domains, manage your settlements, and muster your forces. The characters
   in the world are how you interact. They can carry out your will, and just as importantly, report on what is happening
   in the realm that you need to be aware of. Fealty is played over a series of "kingdom games". Each kingdom game
@@ -32,25 +33,16 @@ title: Home
   <img src="{{ site.baseurl }}/public/images/the-game.png" class="image-left" />
 </span>
 
-<img src="{{ site.baseurl }}/public/images/fealty-hr.png" class="center bottom-margin top-margin" />
+<img src="{{ site.baseurl }}/public/images/fealty-hr.png" class="center" />
 
 <span class="center bottom-margin top-margin">
-  Give <b>commands</b> to your family members to raise troops, prepare them for battle, and then conquer the settlements
-  of your rivals. You must also <b>manage</b> your settlements in order to care for your people and grow your economy.
-  You only have direct control over those governed by your family, but others may bend the knee and pay tribute, or provide troops of their own.
-</span>
-
-<span class="center bottom-margin top-margin">
-  Count your resources and gather your troops - the world of Fealty awaits.
+  <center><i><b>Fealty</b></i> is early in development with the current focus being the core real-time simulation and strategic
+  elements.</center>
 </span>
 
 <img src="{{ site.baseurl }}/public/images/fealty-hr.png" class="center" />
 
-<span class="center bottom-margin top-margin">
-  <i><b>Fealty</b></i> is early in development with the current focus being the core real-time simulation and strategic elements.
-</span>
-
-<img src="{{ site.baseurl }}/public/images/devblog-header2.png" class="center top-margin"/>
+<img src="{{ site.baseurl }}/public/images/devblog-header2.png" class="center top-margin" />
 
 <div class="posts">
   {% for post in paginator.posts %}
