main page remove logo and move up the game art

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 title: Home
 ---
 
-<img src="{{ site.baseurl }}/public/images/fealty_logo.png" class="center" />
+<!-- <img src="{{ site.baseurl }}/public/images/fealty_logo.png" class="center" /> -->
+<img src="{{ site.baseurl }}/public/images/the-game.png" class="center" />
 
 <span class="center">
   <i><b>Fealty</b></i> is a real-time strategy-rpg set in a world inspired by the early middle ages. You take control of
@@ -30,7 +31,7 @@ title: Home
       all to see.
     </p>
   </span>
-  <img src="{{ site.baseurl }}/public/images/the-game.png" class="image-left" />
+  <!-- <img src="{{ site.baseurl }}/public/images/the-game.png" class="image-left" /> -->
 </span>
 
 <img src="{{ site.baseurl }}/public/images/fealty-hr.png" class="center" />
