--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@ title: Home
 <!-- <img src="{{ site.baseurl }}/public/images/fealty_logo.png" class="center" /> -->
 <img src="{{ site.baseurl }}/public/images/the-game.png" class="center" />
 
-<span class="center">
-  <i><b>Fealty</b></i> is a real-time strategy-rpg set in a world inspired by the early middle ages. You take control of
+<span>
+  <center><i><b>Fealty</b></i> is a real-time strategy-rpg set in a world inspired by the early middle ages. You take control of
   a family of
   characters and it is your task to expand your domains, manage your settlements, and muster your forces. The characters
   in the world are how you interact. They can carry out your will, and just as importantly, report on what is happening
   in the realm that you need to be aware of. Fealty is played over a series of "kingdom games". Each kingdom game
   represents a geographical area over which families compete for control of the settlements in the game. Once a player
-  has achieved dominance over the kingdom, then the game ends.
+  has achieved dominance over the kingdom, then the game ends.</center>
 </span>
 
 <img src="{{ site.baseurl }}/public/images/fealty-hr.png" class="center bottom-margin top-margin" />
 
-<span class="center bottom-margin top-margin">
-  <span class="preText">
+<span>
+  <center>
     <p>
       Once a game is over, each family gains Prestige earned from their actions and choices during the game. Prestige
       can be earned in different ways including: direct control of settlements, economic productivity,
@@ -30,8 +30,7 @@ title: Home
       The Prestige players earn carries between games and determines their placement on the Prestige Leaderboards - for
       all to see.
     </p>
-  </span>
-  <!-- <img src="{{ site.baseurl }}/public/images/the-game.png" class="image-left" /> -->
+  </center>
 </span>
 
 <img src="{{ site.baseurl }}/public/images/fealty-hr.png" class="center" />
