--- a/index.html
+++ b/index.html
@@ -6,41 +6,24 @@ title: Home
 <!-- <img src="{{ site.baseurl }}/public/images/fealty_logo.png" class="center" /> -->
 <img src="{{ site.baseurl }}/public/images/the-game.png" class="center" />
 
-<span>
-  <center><i><b>Fealty</b></i> is a real-time strategy-rpg set in a world inspired by the early middle ages. You take control of
-  a family of
-  characters and it is your task to expand your domains, manage your settlements, and muster your forces. The characters
-  in the world are how you interact. They can carry out your will, and just as importantly, report on what is happening
-  in the realm that you need to be aware of. Fealty is played over a series of "kingdom games". Each kingdom game
-  represents a geographical area over which families compete for control of the settlements in the game. Once a player
-  has achieved dominance over the kingdom, then the game ends.</center>
-</span>
 
+  <center><p>
+  <i><b>Fealty</b></i> is a real-time strategy-rpg set in a world inspired by the early middle ages. You take control of a noble family and it is your task to expand your domains, manage your settlements, and muster your forces. The characters in the world are your intermediaries - they can carry out your will, and just as importantly, report on what is happening in the realm - but they are imperfect.</p>
+
+    <p>You must lead your family in a brutal world where problems are often solved through violence. But that is not the only way...</p>
+
+    <p>Putting everyone to the sword can be effective but so can soft words whispered in the right ear. The right relationships are critical for surviving and coexisting. And do not underestimate the power of coin. A city of thriving trade doesn't need its people to fight when it can pay for whatever mercenaries it needs.</p>
+    
+    </p><b>Plan</b> your strategy for neutralizing your enemies.
+    </p><b>Choose</b> how you develop your family members to fulfill your strategy. 
+    </p><b>Lead</b> your family.
+
+    </p><a href="/about.html">Learn more</a>
+  </center>
 <img src="{{ site.baseurl }}/public/images/fealty-hr.png" class="center bottom-margin top-margin" />
 
-<span>
-  <center>
-    <p>
-      Once a game is over, each family gains Prestige earned from their actions and choices during the game. Prestige
-      can be earned in different ways including: direct control of settlements, economic productivity,
-      powerful/honorable characters, and diplomatic treatises. A family that does not control the map may still come out
-      ahead in the final Prestige count.
-    </p>
-    <p>
-      The Prestige players earn carries between games and determines their placement on the Prestige Leaderboards - for
-      all to see.
-    </p>
-  </center>
-</span>
-
-<img src="{{ site.baseurl }}/public/images/fealty-hr.png" class="center" />
-
-<span class="center bottom-margin top-margin">
-  <center><i><b>Fealty</b></i> is early in development with the current focus being the core real-time simulation and strategic
-  elements.</center>
-</span>
-
-<img src="{{ site.baseurl }}/public/images/fealty-hr.png" class="center" />
+<center><i><b>Fealty</b></i> is early in development with the current focus being the core real-time simulation and
+  strategic elements.</center>
 
 <img src="{{ site.baseurl }}/public/images/devblog-header2.png" class="center top-margin" />
 
